--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "bare_metal_led"
+name = "bare_metal_uart"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tock-registers = "0.8.x"
 
 [profile.release]
-panic = "abort" # Abort on panic in release builds.
+panic = "abort"
